<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translate"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/share_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#888888"
            android:textSize="14sp"
            android:text="@string/share_sr"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/wechat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#888888"
                android:textSize="13sp"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/wechat_bg"
                android:drawablePadding="5dp"
                android:text="@string/share_wx"/>
            <TextView
                android:id="@+id/moment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#888888"
                android:textSize="13sp"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/commot_bg"
                android:drawablePadding="5dp"
                android:text="@string/share_mont"/>
            <TextView
                android:id="@+id/qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#888888"
                android:textSize="13sp"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/qq_bg"
                android:drawablePadding="5dp"
                android:text="@string/share_qq"/>
            <TextView
                android:id="@+id/qzone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#888888"
                android:textSize="13sp"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/qzone_bg"
                android:drawablePadding="5dp"
                android:text="@string/share_qzone"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/share_bg"
        android:textSize="20sp"
        android:textColor="#FFBB4A"
        android:text="取消"
        android:gravity="center"
        android:layout_margin="10dp"/>
</LinearLayout>